# mixmaster-ai

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  run.bat
src/mixmaster/api/: routes.py  schemas.py
src/mixmaster/core/: processor.py  renderer.py
src/mixmaster/ui/: app.py
src/mixmaster/utils/: cleanup.py  logger.py  settings.py
tests/: test_api.py  test_audio_logic.py
