[project]
name = "mixmaster-ai"
version = "0.1.0"
description = "Automated YouTube Mixtape Creation System"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydub>=0.25.1",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "streamlit>=1.31.0",
    "python-multipart>=0.0.7",
    "pydantic-settings>=2.1.0",
    "moviepy==1.0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mixmaster"]

[dependency-groups]
dev = [
    "black>=26.1.0",
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.0",
]
[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]